# VideoAutoCategorize

./: .env.example  .gitignore  DATABASE_CLEAR_FIX_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INDEXING_PROGRESS_FIX_SUMMARY.md  INDEXING_SYNCHRONIZATION_SOLUTION.md  MODEL_AND_CANCEL_FIXES_COMPLETE.md  MODEL_REFRESH_COMPLETE_FIX.md  MODEL_REFRESH_FIX_SUMMARY.md  MVP_DEVELOPMENT_PLAN.md  PROGRESS_TRACKING_DEBUG.md  PROMPT_AND_MODEL_FIXES.md  PROMPT_FIXES_SUMMARY.md  README.md  TECHNICAL_SPECIFICATIONS.md  check_database.py  create_test_media.py  debug_analysis.py  debug_issues_summary.md  debug_model_and_cancel.py  debug_model_issue.py  debug_ollama.py  debug_prompt_config.py  force_llm_recreation.py  test-frontend.html  test_api_endpoints.py  test_comprehensive_fixes.py  test_database_clear_fix.py  test_e2e_puppeteer.js  test_end_to_end.py  test_final_fix.py  test_frontend_api.html  test_indexing_service_refresh.py  test_model_fix.py  test_model_refresh.py  test_model_refresh_api.py  test_parsing_fixes.py  test_prompt_api.py  test_prompt_fix.py  (+8 more)
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  config_api.py  health.py  indexing.py  media.py  prompts_api.py  search.py
backend/app/database/: __init__.py  schemas.py  vector_db.py
backend/app/models/: __init__.py  common.py  indexing.py  media.py  prompts.py
backend/app/services/: __init__.py  config_manager.py  indexing.py  llm_service.py  media.py  prompt_manager.py  prompt_migration.py  search.py
backend/tests/: __init__.py  test_health.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  test-store.ts
frontend/src/components/: IndexingNotifications.tsx  MediaGallery.tsx  MediaViewer.tsx  PromptConfiguration.tsx  PromptEditor.tsx  (+5 more)
scripts/: dev-start.sh  setup.sh  test-integration.sh
(+5 files in other folders)
